tests/NormalTests/paczka1/small_fuzzy/11163526.err
Error in line 2: pJwAs3N A266 77,9
Error in line 11: gd15O A841 17,2
Error in line 7: A134 A266 28,2
